# matching-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  conanfile.txt  main.cpp  markov.h  trading_info.cpp
Matching/: CMakeLists.txt
Matching/inc/: OrderBook.h
Matching/src/: OrderBook.cpp  influxdb.hpp  order_router.hpp  orderbook.hpp  tcp_server.hpp  transport.hpp
Research/: Matching analysis.ipynb  README.md
Service/: CMakeLists.txt  main.cpp
Service/inc/: markov.h
Service/src/: main.cpp
Testing/Benchmark/: CMakeLists.txt  main.cpp
Testing/UnitTest/: CMakeLists.txt  main.cpp
Testing/inc/: markov.h
proto/: matcher.grpc.pb.cc  matcher.grpc.pb.h  matcher.pb.cc  matcher.pb.h  order.grpc.pb.cc  order.grpc.pb.h  order.pb.cc  order.pb.h  orderbook.grpc.pb.cc  orderbook.grpc.pb.h  orderbook.pb.cc  orderbook.pb.h  shared.grpc.pb.cc  shared.grpc.pb.h  shared.pb.cc  shared.pb.h
